compiler/tests/snapshots/parse_success__empty.snap
---
source: compiler/tests/parse_success.rs
expression: ""
---

=== Source ===


=== Tokens ===
[]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        0,
    ),
    body: [],
}

