compiler/tests/snapshots/parse_success__identifier.snap
---
source: compiler/tests/parse_success.rs
expression: cool
---

=== Source ===
cool

=== Tokens ===
[
    Identifier(
        0,
        4,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        4,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                4,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        4,
                    ),
                    kind: Identifier(
                        IdentifierNode {
                            pos: (
                                0,
                                4,
                            ),
                            name: "cool",
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

