compiler/tests/snapshots/parse_success__let_pattern_nested_tuples.snap
---
source: compiler/tests/parse_success.rs
expression: "let (a, _, (_, b)) = (47, something, tuple)"
---

=== Source ===
let (a, _, (_, b)) = (47, something, tuple)

=== Tokens ===
[
    KeywordLet(
        0,
        3,
    ),
    LeftParen(
        4,
        5,
    ),
    Identifier(
        5,
        6,
    ),
    Comma(
        6,
        7,
    ),
    Underscore(
        8,
        9,
    ),
    Comma(
        9,
        10,
    ),
    LeftParen(
        11,
        12,
    ),
    Underscore(
        12,
        13,
    ),
    Comma(
        13,
        14,
    ),
    Identifier(
        15,
        16,
    ),
    RightParen(
        16,
        17,
    ),
    RightParen(
        17,
        18,
    ),
    Equals(
        19,
        20,
    ),
    LeftParen(
        21,
        22,
    ),
    DecimalDigits(
        22,
        24,
    ),
    Comma(
        24,
        25,
    ),
    Identifier(
        26,
        35,
    ),
    Comma(
        35,
        36,
    ),
    Identifier(
        37,
        42,
    ),
    RightParen(
        42,
        43,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        43,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                43,
            ),
            kind: Let(
                LetNode {
                    pos: (
                        0,
                        43,
                    ),
                    pattern: PatternNode {
                        pos: (
                            4,
                            18,
                        ),
                        kind: Tuple(
                            [
                                PatternNode {
                                    pos: (
                                        5,
                                        6,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                5,
                                                6,
                                            ),
                                            name: "a",
                                        },
                                    ),
                                },
                                PatternNode {
                                    pos: (
                                        8,
                                        9,
                                    ),
                                    kind: Underscore,
                                },
                                PatternNode {
                                    pos: (
                                        11,
                                        17,
                                    ),
                                    kind: Tuple(
                                        [
                                            PatternNode {
                                                pos: (
                                                    12,
                                                    13,
                                                ),
                                                kind: Underscore,
                                            },
                                            PatternNode {
                                                pos: (
                                                    15,
                                                    16,
                                                ),
                                                kind: Identifier(
                                                    IdentifierNode {
                                                        pos: (
                                                            15,
                                                            16,
                                                        ),
                                                        name: "b",
                                                    },
                                                ),
                                            },
                                        ],
                                    ),
                                },
                            ],
                        ),
                    },
                    value: ExprNode {
                        pos: (
                            21,
                            43,
                        ),
                        kind: Tuple(
                            [
                                ExprNode {
                                    pos: (
                                        22,
                                        24,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                22,
                                                24,
                                            ),
                                            kind: IntDecimal(
                                                47,
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        26,
                                        35,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                26,
                                                35,
                                            ),
                                            name: "something",
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        37,
                                        42,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                37,
                                                42,
                                            ),
                                            name: "tuple",
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                        ),
                        typ: Unknown,
                    },
                },
            ),
        },
    ],
}

